Add list of projects

--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 </head>
 
 <body>
-
+<ul>
+    <li>
+        react-button-incrementation
+        <a class="btn btn--primary" href="https://jacmgh.github.io/react-button-incrementation/">Demo</a>
+        <a class="btn" href="https://github.com/jacmgh/react-button-incrementation">Code</a>
+    </li>
+</ul>
 </body>
 
 </html>
