Add new project

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
         <a class="btn btn--primary" href="https://jacmgh.github.io/react-button-incrementation/">Demo</a>
         <a class="btn" href="https://github.com/jacmgh/react-button-incrementation">Code</a>
     </li>
+    <li>
+        react-stopwatch
+        <a class="btn btn--primary" href="https://jacmgh.github.io/react-stopwatch/">Demo</a>
+        <a class="btn" href="https://github.com/jacmgh/react-stopwatch">Code</a>
+    </li>
 </ul>
 </body>
 
