--- a/index.html
+++ b/index.html
@@ -9,18 +9,27 @@
 </head>
 
 <body>
-<ul>
-    <li>
-        react-button-incrementation
-        <a class="btn btn--primary" href="https://jacmgh.github.io/react-button-incrementation/">Demo</a>
-        <a class="btn" href="https://github.com/jacmgh/react-button-incrementation">Code</a>
-    </li>
-    <li>
-        react-stopwatch
-        <a class="btn btn--primary" href="https://jacmgh.github.io/react-stopwatch/">Demo</a>
-        <a class="btn" href="https://github.com/jacmgh/react-stopwatch">Code</a>
-    </li>
-</ul>
+    <h2>JavaScript</h2>
+    <ul>
+        <li>
+            js-todo
+            <a class="btn btn--primary" href="https://jacmgh.github.io/js-todo/">Demo</a>
+            <a class="btn" href="https://github.com/jacmgh/js-todo">Code</a>
+        </li>
+    </ul>
+    <h2>ReactJS</h2>
+    <ul>
+        <li>
+            react-button-incrementation
+            <a class="btn btn--primary" href="https://jacmgh.github.io/react-button-incrementation/">Demo</a>
+            <a class="btn" href="https://github.com/jacmgh/react-button-incrementation">Code</a>
+        </li>
+        <li>
+            react-stopwatch
+            <a class="btn btn--primary" href="https://jacmgh.github.io/react-stopwatch/">Demo</a>
+            <a class="btn" href="https://github.com/jacmgh/react-stopwatch">Code</a>
+        </li>
+    </ul>
 </body>
 
 </html>
