Add jQuery slider

--- a/index.html
+++ b/index.html
@@ -12,20 +12,28 @@
     <h2>JavaScript</h2>
     <ul>
         <li>
-            js-todo
+            Todo
             <a class="btn btn--primary" href="https://jacmgh.github.io/js-todo/">Demo</a>
             <a class="btn" href="https://github.com/jacmgh/js-todo">Code</a>
+        </li>
+    </ul>
+    <h2>jQuery</h2>
+    <ul>
+        <li>
+            Simple slider
+            <a class="btn btn--primary" href="https://jacmgh.github.io/jquery-simple-slider/">Demo</a>
+            <a class="btn" href="https://github.com/jacmgh/jquery-simple-slider">Code</a>
         </li>
     </ul>
     <h2>ReactJS</h2>
     <ul>
         <li>
-            react-button-incrementation
+            Button incrementation
             <a class="btn btn--primary" href="https://jacmgh.github.io/react-button-incrementation/">Demo</a>
             <a class="btn" href="https://github.com/jacmgh/react-button-incrementation">Code</a>
         </li>
         <li>
-            react-stopwatch
+            Stopwatch
             <a class="btn btn--primary" href="https://jacmgh.github.io/react-stopwatch/">Demo</a>
             <a class="btn" href="https://github.com/jacmgh/react-stopwatch">Code</a>
         </li>
