Add jQuery simple lightbox

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
             <a class="btn btn--primary" href="https://jacmgh.github.io/jquery-simple-slider/">Demo</a>
             <a class="btn" href="https://github.com/jacmgh/jquery-simple-slider">Code</a>
         </li>
+        <li>
+            Simple lightbox
+            <a class="btn btn--primary" href="https://jacmgh.github.io/jquery-simple-lightbox/">Demo</a>
+            <a class="btn" href="https://github.com/jacmgh/jquery-simple-lightbox">Code</a>
+        </li>
     </ul>
     <h2>ReactJS</h2>
     <ul>
