--- a/index.html
+++ b/index.html
@@ -9,40 +9,77 @@
 </head>
 
 <body>
-    <h2>JavaScript</h2>
-    <ul>
-        <li>
-            Todo
-            <a class="btn btn--primary" href="https://jacmgh.github.io/js-todo/">Demo</a>
-            <a class="btn" href="https://github.com/jacmgh/js-todo">Code</a>
-        </li>
-    </ul>
-    <h2>jQuery</h2>
-    <ul>
-        <li>
-            Simple slider
-            <a class="btn btn--primary" href="https://jacmgh.github.io/jquery-simple-slider/">Demo</a>
-            <a class="btn" href="https://github.com/jacmgh/jquery-simple-slider">Code</a>
-        </li>
-        <li>
-            Simple lightbox
-            <a class="btn btn--primary" href="https://jacmgh.github.io/jquery-simple-lightbox/">Demo</a>
-            <a class="btn" href="https://github.com/jacmgh/jquery-simple-lightbox">Code</a>
-        </li>
-    </ul>
-    <h2>ReactJS</h2>
-    <ul>
-        <li>
-            Button incrementation
-            <a class="btn btn--primary" href="https://jacmgh.github.io/react-button-incrementation/">Demo</a>
-            <a class="btn" href="https://github.com/jacmgh/react-button-incrementation">Code</a>
-        </li>
-        <li>
-            Stopwatch
-            <a class="btn btn--primary" href="https://jacmgh.github.io/react-stopwatch/">Demo</a>
-            <a class="btn" href="https://github.com/jacmgh/react-stopwatch">Code</a>
-        </li>
-    </ul>
+    <section>
+        <h2>HTML</h2>
+        <ul>
+            <li>
+                <h3>Weekly WebDev Challenge 30</h3>
+                <a class="btn btn--primary" href="https://jacmgh.github.io/weekly-webdev-challenge-30/">Demo</a>
+                <a class="btn" href="https://github.com/jacmgh/weekly-webdev-challenge-30">Code</a>
+            </li>
+        </ul>
+    </section>
+    <section>
+        <h2>JavaScript</h2>
+        <ul>
+            <li>
+                <h3>Todo</h3>
+                <a class="btn btn--primary" href="https://jacmgh.github.io/js-todo/">Demo</a>
+                <a class="btn" href="https://github.com/jacmgh/js-todo">Code</a>
+            </li>
+        </ul>
+    </section>
+    <section>
+        <h2>jQuery</h2>
+        <ul>
+            <li>
+                <h3>Counter animation</h3>
+                <a class="btn btn--primary" href="https://jacmgh.github.io/jquery-counter-animation/">Demo</a>
+                <a class="btn" href="https://github.com/jacmgh/jquery-counter-animation">Code</a>
+            </li>
+            <li>
+                <h3>Simple lightbox</h3>
+                <a class="btn btn--primary" href="https://jacmgh.github.io/jquery-simple-lightbox/">Demo</a>
+                <a class="btn" href="https://github.com/jacmgh/jquery-simple-lightbox">Code</a>
+            </li>
+            <li>
+                <h3>Simple slider</h3>
+                <a class="btn btn--primary" href="https://jacmgh.github.io/jquery-simple-slider/">Demo</a>
+                <a class="btn" href="https://github.com/jacmgh/jquery-simple-slider">Code</a>
+            </li>
+        </ul>
+    </section>
+    <section>
+        <h2>ReactJS</h2>
+        <ul>
+            <li>
+                <h3>Redux REST API</h3>
+                <a class="btn btn--primary" href="https://jacmgh.github.io/react-redux-rest-api/">Demo</a>
+                <a class="btn" href="https://github.com/jacmgh/react-redux-rest-api">Code</a>
+            </li>
+
+            <li>
+                <h3>Stopwatch</h3>
+                <a class="btn btn--primary" href="https://jacmgh.github.io/react-stopwatch/">Demo</a>
+                <a class="btn" href="https://github.com/jacmgh/react-stopwatch">Code</a>
+            </li>
+            <li>
+                <h3>Redux Todo</h3>
+                <a class="btn btn--primary" href="https://jacmgh.github.io/react-redux-todo/">Demo</a>
+                <a class="btn" href="https://github.com/jacmgh/react-redux-todo">Code</a>
+            </li>
+            <li>
+                <h3>Simple Redux</h3>
+                <a class="btn btn--primary" href="https://jacmgh.github.io/react-simple-redux/">Demo</a>
+                <a class="btn" href="https://github.com/jacmgh/react-simple-redux">Code</a>
+            </li>
+            <li>
+                <h3>Button incrementation</h3>
+                <a class="btn btn--primary" href="https://jacmgh.github.io/react-button-incrementation/">Demo</a>
+                <a class="btn" href="https://github.com/jacmgh/react-button-incrementation">Code</a>
+            </li>
+        </ul>
+    </section>
 </body>
 
 </html>
